Fixed layout issue on edit trip page

--- a/src/styles/pages/editTripPage.scss
+++ b/src/styles/pages/editTripPage.scss
@@ -5,12 +5,20 @@
 @use "../variables.scss" as *;
 
 .editTrip__main {
+
+  width: 100%;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   .editTrip__form {
     display: flex;
     flex-direction: column;
-    width: 100vw;
     
-    padding: 2em;
+    width: 100%;
+    max-width: 768px;
+    padding: 2em 0;
     gap: 3em;
 
     .input__group {
@@ -34,7 +42,6 @@
         &:not(:placeholder-shown) + label {
           top: -1.5rem;
           left: 0rem;
-          
           font-size: 0.9rem;
           color: $label-blue;
           background: white;
@@ -43,15 +50,18 @@
         }
       }
 
+      
+
       label {
         position: absolute;
         left: 0.75rem;
         padding: 1em;
-        top: 1rem;
+        top: 0rem;
         color: #777;
         pointer-events: none;
         transition: all 0.3s ease;
       }
+      
     }
     .addTrip-btn {
       @include custom-button(#9f2205, white);
@@ -65,6 +75,7 @@
       }
     }
   }
+  
 
   .trip_type-dropdown {
     width: 100%;
